@@ -9,7 +9,9 @@ use Convos::Core::Backend::File;
 no warnings qw( once redefine );
 
 my $core = Convos::Core->new(backend => 'Convos::Core::Backend::File');
-my $user = $core->user({email => 'jhthorsen@cpan.org'});
+
+# test trim and lower case
+my $user = $core->user({email => ' JhtHorsen@cpan.org  '});
 my $settings_file = File::Spec->catfile($ENV{CONVOS_HOME}, 'jhthorsen@cpan.org', 'user.json');
 is $user->email, 'jhthorsen@cpan.org', 'email';
 is $user->password, '', 'password';
